--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- start of header -->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,7 +24,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
@@ -71,12 +72,13 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <!-- start of footer -->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
