--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <!-- start of content with three articles -->
     <section class="content">      
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="notebook on a table"/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="notebook on search engine optimaization on top of a table"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="computer with reputation graphic onscreen"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="a computer with a graphic of an upwards reputation"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -81,7 +81,7 @@
 </main>
     <!-- start of footer -->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <p id="signoff">Made with ❤️️ by Horiseon
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
