--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- start of main -->
 <main>
     <!-- hero image -->
-    <div class="hero"></div>
+    <img src="assets/images/digital-marketing-meeting.jpg" alt="A group of people strategizing at a conference table." id="hero">
     <!-- start of content with three articles -->
     <section class="content">      
         <article id="search-engine-optimization" class="search-engine-optimization">
